Add GUI with movement cooldown and fix room connectivity
- Created engine/gui.clj with Swing-based windowed GUI
- Real-time rendering at 60 FPS using Timer
- Movement cooldown (150ms between moves) for playable speed
- Fixed stagebuilder/generator.clj to create doorways in room walls
- Updated input.clj and movement.clj for diagonal movement support
- Rebranded from 'roguelike' to 'mazelike' across project
- Added run-gui.sh launch script with JVM module exports
- Updated project.clj with :main engine.gui for uberjar